Update the css for fix the alignment for arrow of Makeup and glam category

--- a/app/design/frontend/Alothemes/default/web/css/styles.css
+++ b/app/design/frontend/Alothemes/default/web/css/styles.css
@@ -7138,7 +7138,7 @@ margin: 0px !important;
 .recommend-box .slick-next {
     padding: 0 !important;
     border: 0 !important;
-    width: 44px !important;
+    width: 36px !important;
     height: 46px !important;
     line-height: 20px !important;
     overflow: hidden !important;
